# UE4-Aereo

./: .gitignore  Aereo.kdev4  Aereo.pro  Aereo.uproject  Aereo.workspace  AereoCodeCompletionFolders.txt  AereoCodeLitePreProcessor.txt  AereoConfig.pri  AereoDefines.pri  AereoHeader.pri  AereoIncludes.pri  AereoSource.pri  CMakeLists.txt
Config/: DefaultEditor.ini  DefaultEditorUserSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: Aereo.umap  AereoGameModeBase_Blueprint.uasset  CentralSpotLight.uasset  DefaultPawn_Blueprint.uasset  LateralSpotLight.uasset  door_Blueprint.uasset
Content/Import/: door.uasset  door_wall.uasset  pen.uasset  single_sit.uasset  top.uasset  wall.uasset
Content/StarterContent/Particles/Materials/: M_Heat_Distortion.uasset
Source/: Aereo.Target.cs  AereoEditor.Target.cs
Source/Aereo/: Aereo.Build.cs  Aereo.cpp  AereoGameModeBase.cpp  AereoGameModeBase.h  AirplaneDoor.cpp  AirplaneDoor.h  Grabber.cpp  Grabber.h  OpenDoor.cpp  OpenDoor.h  tableMoves.cpp  tableMoves.h
